# arca

./: .gitignore  HN_LAUNCH.md  PHASES.md  README.md  arca.toml  pyproject.toml
app/: package-lock.json  package.json
app/src/: App.css  App.jsx  global.css  main.jsx
app/src-tauri/: tauri.conf.json
arca/: __init__.py  config.py  main.py  server.py
arca/agent/: __init__.py  ambient.py  context.py  loop.py  mcp_client.py  memory.py  tools.py
arca/terminal/: __init__.py  shell.py  ui.py
arca/voice/: __init__.py  pipeline.py  stt.py  tts.py  vad.py  wakeword.py
scripts/: setup.sh
