[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arca"
version = "0.2.0"
description = "AI voice agentic terminal — speak naturally, execute intelligently"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "anthropic>=0.50.0",
    "textual>=0.80.0",
    "rich>=13.0.0",
    "pexpect>=4.9.0",
    "silero-vad>=5.0.0",
    "chromadb>=0.6.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
tts = ["kokoro-onnx>=0.4.0", "soundfile>=0.12.0"]
wakeword = ["openwakeword>=0.6.0"]
wakeword-porcupine = ["pvporcupine>=3.0.0"]
mcp = ["mcp>=1.5.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[project.scripts]
arca = "arca.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
